--- a/src/pages/Seller/HomeSeller/homeStyle/header.scss
+++ b/src/pages/Seller/HomeSeller/homeStyle/header.scss
@@ -1,10 +1,14 @@
 #header-seller{
-  margin-top: 12px;
+  padding-top: 12px;
   .container{
     .logo{
-      width: 120px;
-      height: 50px;
+      width: 150px;
+      height: 70px;
       background-color: #ECECEC;
+      img{
+        width: 150px;
+        height: 70px;
+      }
     }
     .login-register{
       button{
@@ -13,9 +17,11 @@
         border-radius: 12px;
         border: 1px solid #00b14f;
         background-color: #ffffff;
+        color: #00b14f;
         &:first-child{
           margin-right: 12px;
           background-color: #00b14f;
+          color: #ffffff;
         }
       }
     }
