--- a/src/pages/Seller/LoginSeller/loginStyle.scss
+++ b/src/pages/Seller/LoginSeller/loginStyle.scss
@@ -1,25 +1,39 @@
 #login-form{
   .header-login{
     padding: 20px 16px 0 16px;
-    background-color: #ffffff;
+    background-color: #f28466;
+    border-bottom: 1px solid #00b14f;
+    padding-bottom: 12px;
     .logo{
-      img{
+      a{
+        flex: 0 0 auto;
+        width: 10rem;
+        padding: 0 0 0 0.5rem;
+        font-size: 2.5rem;
+        font-weight: 600;
+        line-height: 2.5rem;
         cursor: pointer;
-        margin-right: 20px;
-        width: 120px;
-        height: 60px;
+        color: #ffffff;
       }
-      h2{
-        font-size: 30px;
-        color: #000000;
+      .nav-login{
+        h2{
+          font-size: 30px;
+          color: #000000;
+        }
+        a{
+          font-size: 14px;
+          color: #ffffff;
+          cursor: pointer;
+        }
       }
+
     }
     .help{
       cursor: pointer;
-      height: 40px;
       p{
+        margin: 0;
         color: #00b14f;
-        font-size: 14px;
+        font-size: 16px;
       }
     }
   }
@@ -28,8 +42,15 @@
     height: 500px;
     background-color: #ECECEC;
     margin-right: 30px;
+    border-radius: 8px;
+    overflow: hidden;
+    img{
+      width: 500px;
+      height: 500px;
+    }
   }
   .form-login{
+    margin-right: 200px;
     .title{
       color: #ffffff;
       font-size: 25px;
@@ -41,18 +62,23 @@
         padding: 4px 16px;
         outline: none;
         border: none;
+        width: 100%;
         &:focus{
           border: 1px solid #00b14f;
           outline: none;
         }
       }
+      p{
+        margin-bottom: 8px;
+        color: #ffffff;
+      }
       .user-name{
-        margin-bottom: 30px;
+        margin-bottom: 15px;
       }
       .password{
         .show-pass{
-          top: 3px;
-          right: 5px;
+          top: 35px;
+          right: 10px;
           cursor: pointer;
         }
       }
@@ -78,6 +104,9 @@
         &:hover{
           background-color: #00b14f;
           color: #ffffff;
+        }
+        &:first-child{
+          margin-right: 8px;
         }
       }
     }
