--- a/src/pages/Buyer/BuyerPage/Account/ProfileBuyer/style.scss
+++ b/src/pages/Buyer/BuyerPage/Account/ProfileBuyer/style.scss
@@ -79,10 +79,11 @@ p{
                     display: flex;
                     height: 40px;
 
-                    a{
+                    span{
                         margin: auto 10px;
                         text-decoration: underline;
                         color: forestgreen;
+                        cursor: pointer;
                     }
 
                     p{
