--- a/src/pages/Buyer/NoticeBuyer/NoticeBuyer.scss
+++ b/src/pages/Buyer/NoticeBuyer/NoticeBuyer.scss
@@ -23,7 +23,7 @@
         list-style: none;
         
         .notice__item{
-
+            margin-top: 12px;
             .notice__item-link{
                 display: flex;
                 padding: 12px;
