--- a/src/pages/Seller/SellerCenter/style/menuStyle.scss
+++ b/src/pages/Seller/SellerCenter/style/menuStyle.scss
@@ -1,11 +1,13 @@
-#menu-center{
-.in{
-  display: block;
-}
-  ul{
+#menu-center {
+  .in {
+    display: block;
+  }
+
+  ul {
     list-style-type: none;
   }
-  a{
+
+  a {
     margin: 0 5px;
     border-radius: 3px;
     color: #C1C1C1;
@@ -14,19 +16,32 @@
     padding: 12px 18px;
     display: block;
   }
-.active-sub {
-    a:first-child{
+  li{
+    i{
+      margin-right: 8px;
+    }
+  }
+
+  .active-sub {
+    a:first-child {
       background-color: #0d6efd;
       color: #ffffff;
     }
-  .collapse{
-    a{
-      background-color: #ffffff;
-      color: #C1C1C1;
-    }
-    .children{
 
+    .collapse {
+      a {
+        background-color: #ffffff;
+        color: #C1C1C1;
+      }
+
+      .children {
+
+      }
     }
   }
+  .active-link{
+    a{
+      color: #0d6efd!important;
+    }
   }
 }
