--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,12 @@
 @import 'variables';
 
 @import 'custom';
+.nen{
+  width: 100%;
+  height: 100%;
+  background-color: #00000096;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
+}
