--- a/src/pages/Seller/SellerCenter/style/productList.scss
+++ b/src/pages/Seller/SellerCenter/style/productList.scss
@@ -1,20 +1,22 @@
-#product-list{
+#product-list {
   padding: 20px 20px;
   background-color: #ffffff;
   width: 1000px;
   margin-top: 20px;
-  .title{
-    p{
+
+  .title {
+    p {
       font-size: 25px;
       color: #000000;
     }
   }
-  .product{
+
+  .product {
     margin-bottom: 20px;
     border-bottom: 1px solid #ECECEC;
     padding-bottom: 20px;
 
-    .image-product{
+    .image-product {
       width: 60px;
       height: 60px;
       border-radius: 4px;
@@ -22,28 +24,33 @@
       overflow: hidden;
       margin-right: 16px;
     }
-    .name-product{
+
+    .name-product {
       width: 200px;
       margin-right: 20px;
       font-size: 18px;
     }
-    .btn-nav{
-      button{
+
+    .btn-nav {
+      button {
         background-color: #ffffff;
         height: 40px;
         border: 1px solid #ECECEC;
         border-radius: 4px;
-        &:first-child{
+
+        &:first-child {
           margin-right: 20px;
         }
-        &:hover{
+
+        &:hover {
           background-color: #0d6efd;
           color: #ffffff;
         }
       }
     }
   }
-  .confirm-delete{
+
+  .confirm-delete {
     top: 180px;
     left: 300px;
     background-color: #ffffff;
@@ -51,21 +58,55 @@
     padding: 16px;
     z-index: 2;
     border-radius: 8px;
-    .btn-confirm{
-     button{
-       background-color: #ffffff;
-       border-radius: 4px;
-       border: 1px solid #ECECEC;
-       color: #000000;
-       &:first-child{
-         margin-right: 20px;
-       }
-       &:hover{
-         background-color: #0d6efd;
-         color: #ffffff;
-       }
-     }
 
+    .btn-confirm {
+      button {
+        background-color: #ffffff;
+        border-radius: 4px;
+        border: 1px solid #ECECEC;
+        color: #000000;
+
+        &:first-child {
+          margin-right: 20px;
+        }
+
+        &:hover {
+          background-color: #0d6efd;
+          color: #ffffff;
+        }
+      }
+
+    }
+  }
+
+  .edit-product {
+    background-color: #ffffff;
+    position: fixed;
+    top: 20%;
+    left: 50%;
+    z-index: 2;
+    padding: 20px;
+    border-radius: 8px;
+    p {
+      margin-bottom: 0;
+    }
+.price{
+  margin-top: 20px;
+}
+    .btn-confirm {
+      margin-top: 20px;
+
+      button {
+        background-color: #ffffff;
+        border-radius: 4px;
+        border: 1px solid #ECECEC;
+        color: #000000;
+
+        &:hover {
+          background-color: #0d6efd;
+          color: #ffffff;
+        }
+      }
     }
   }
 }
