--- a/src/pages/Seller/SellerCenter/style/createProduct.scss
+++ b/src/pages/Seller/SellerCenter/style/createProduct.scss
@@ -64,4 +64,17 @@
       }
     }
   }
+  .image{
+    input{
+      width: 500px;
+      height: 40px;
+      border-radius: 4px;
+      border: 1px solid #ECECEC;
+      padding: 0 8px;
+      color: #000000;
+      &:focus{
+        outline: none;
+      }
+    }
+  }
 }
