--- a/src/pages/Seller/SellerCenter/style/productList.scss
+++ b/src/pages/Seller/SellerCenter/style/productList.scss
@@ -23,6 +23,10 @@
       background-color: #ECECEC;
       overflow: hidden;
       margin-right: 16px;
+      img{
+        width: 60px;
+        height: 60px;
+      }
     }
 
     .name-product {
