--- a/src/pages/components/ProductDetail/style/productInformationStyle.scss
+++ b/src/pages/components/ProductDetail/style/productInformationStyle.scss
@@ -5,6 +5,10 @@
     height: 500px;
     background-color: #ECECEC;
     margin-right: 30px;
+    img{
+      width: 500px;
+      height: 500px;
+    }
   }
   .product-information{
     .name-product{
