--- a/src/pages/components/ProductDetail/style/productInformationStyle.scss
+++ b/src/pages/components/ProductDetail/style/productInformationStyle.scss
@@ -1,16 +1,19 @@
 #product-detail{
   margin-top: 30px;
   .image-product{
-    width: 500px;
-    height: 500px;
+    width: 400px;
+    height: 400px;
     background-color: #ECECEC;
     margin-right: 30px;
+    overflow: hidden;
+    border-radius: 8px;
     img{
-      width: 500px;
-      height: 500px;
+      width: 400px;
+      height: 400px;
     }
   }
   .product-information{
+    width: 350px;
     .name-product{
       h1{
         font-size: 30px;
@@ -24,8 +27,66 @@
       }
     }
     .add-to-cart{
+      cursor: pointer;
       i{
         font-size: 30px;
+        color: #1b9e3e;
+      }
+
+    }
+    .btn-buy-now{
+      margin-right: 30px;
+      button{
+        background-color: #ffffff;
+        border-radius: 4px;
+        padding: 6px 8px;
+        font-size: 18px;
+        border: 1px solid #1b9e3e;
+        &:hover{
+          background-color: #1b9e3e;
+          color: #ffffff;
+        }
+      }
+    }
+    .description{
+      margin-top: 30px;
+      max-width: 500px;
+      h2{
+        font-size: 20px;
+      }
+    }
+  }
+  .shop-information{
+    margin-left: 30px;
+
+    .image-shop{
+      width: 100px;
+      height: 100px;
+      background-color: #ECECEC;
+      margin-right: 30px;
+      overflow: hidden;
+      border-radius: 8px;
+    }
+    .info{
+      .name-shop{
+        font-size: 30px;
+        font-weight: bold;
+      }
+      .btn-nav{
+        button{
+          background-color: #ffffff;
+          border-radius: 4px;
+          padding: 6px 8px;
+          font-size: 18px;
+          border: 1px solid #1b9e3e;
+          &:hover{
+            background-color: #1b9e3e;
+            color: #ffffff;
+          }
+          &:first-child{
+            margin-right: 20px;
+          }
+        }
       }
     }
   }
