--- a/src/pages/components/ProductDetail/style/productInformationStyle.scss
+++ b/src/pages/components/ProductDetail/style/productInformationStyle.scss
@@ -34,6 +34,17 @@
       }
 
     }
+    .favourite{
+      cursor: pointer;
+      margin-left: 30px;
+      i{
+        font-size: 30px;
+        color: #4f5d73;
+        &:hover{
+          color: #dc3545;
+        }
+      }
+    }
     .btn-buy-now{
       margin-right: 30px;
       button{
