--- a/src/pages/Buyer/NoticeBuyer/NoticeBuyer.scss
+++ b/src/pages/Buyer/NoticeBuyer/NoticeBuyer.scss
@@ -24,7 +24,7 @@
         
         .notice__item{
             margin-top: 12px;
-            .notice__item-link{
+            .notice__item-link.active{
                 display: flex;
                 padding: 12px;
                 background-color: lightcyan;
@@ -38,6 +38,7 @@
                 .notice__item-info{
                     margin-left: 12px;
                     align-self: center;
+                    width: 80%;
                     .notice__item-name{
                         margin: 0 0 8px 0px;
                     }
@@ -45,7 +46,63 @@
                         margin: 0 0 8px 0;
                     }
                 }
+                .notice__btn{
+                    width:25%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+
+                    .btn1{
+                        margin-bottom: 20px;
+                        align-self: center;
+
+                    }
+                    .btn2{
+                        align-self: center;
+                        
+                      
+                    }
+                }
             }
+            .notice__item-link{
+                display: flex;
+                padding: 12px;
+                background-color:white;
+                width: 100%;
+
+                .notice__item-img{
+                    width: 89px;
+                    object-fit: contain;
+
+                }
+                .notice__item-info{
+                    margin-left: 12px;
+                    align-self: center;
+                    width: 80%;
+                    .notice__item-name{
+                        margin: 0 0 8px 0px;
+                    }
+                    .notice__item-description{
+                        margin: 0 0 8px 0;
+                    }
+                }
+                .notice__btn{
+                    width:25%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+
+                    .btn1{
+                        margin-bottom: 20px;
+                        align-self: center;
+
+                    }
+                    .btn2{
+                        align-self: center;
+                        
+                      
+                    }
+                }
             // .notice__item-link:active,
             // .notice__item-link:visited {
             //     background-color: #FFF;
@@ -55,4 +112,5 @@
         //     background-color: #fff;
         // }
     }
+}
 }
