--- a/src/pages/Seller/SellerCenter/style/productList.scss
+++ b/src/pages/Seller/SellerCenter/style/productList.scss
@@ -3,7 +3,8 @@
   background-color: #ffffff;
   width: 1000px;
   margin-top: 20px;
-
+  height: 700px;
+  overflow-y: scroll;
   .title {
     p {
       font-size: 25px;
