--- a/src/pages/Seller/SellerCenter/style/profileShopStyle.scss
+++ b/src/pages/Seller/SellerCenter/style/profileShopStyle.scss
@@ -4,9 +4,14 @@
   height: 64px;
   border-radius: 50px;
   background-color: #ECECEC;
+  overflow: hidden;
   i{
     color: #ffffff;
     font-size:30px
+  }
+  img{
+    width: 64px;
+    height: 64px;
   }
 }
 }
