--- a/src/pages/components/ProductDetail/style/productInformationStyle.scss
+++ b/src/pages/components/ProductDetail/style/productInformationStyle.scss
@@ -77,6 +77,11 @@
       margin-right: 30px;
       overflow: hidden;
       border-radius: 8px;
+      overflow: hidden;
+      img{
+        width: 100px;
+        height: 100px;
+      }
     }
     .info{
       .name-shop{
