--- a/src/pages/components/ProductItem/productItem.scss
+++ b/src/pages/components/ProductItem/productItem.scss
@@ -5,7 +5,28 @@
   padding: 5px;
   cursor: pointer;
   position: relative;
+
   .h-p-item-container {
+    .h-addcart {
+      display: none;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 100;
+      background-color: limegreen;
+      color: white;
+      transition: all 0.3s ease-in-out;
+      padding: 1rem;
+      align-items: center;
+      justify-content: center;
+      width: 10rem;
+      border-radius: 0.5rem;
+      i {
+        font-size: 2rem;
+        margin-right: 0.5rem;
+      }
+    }
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -16,6 +37,9 @@
     &:hover {
       border-color: $base-color;
       transform: translateY(-0.1rem);
+      .h-addcart {
+        display: flex;
+      }
     }
     .h-p__img {
       position: relative;
@@ -113,7 +137,5 @@
         }
       }
     }
-    
   }
-  
 }
