--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -37,3 +37,10 @@ a {
 .form-control:focus {
   box-shadow: 0 0 0 0.25rem rgba(0, 177, 77, 0.2);
 }
+
+.elevation-4 {
+  box-shadow: $elevations-4;
+}
+.elevation-2 {
+  box-shadow: $elevations-2;
+}
